# Adaptive-Autoeval

./: LICENSE  README.md  pyproject.toml  requirements.txt
adaptive_autoeval/: __init__.py  estimators.py  weights.py
data/imagenet/: README.md
data/proteingym/: README.md
results/: experiments.md
results/ablations/: abl_beta_0p0.csv  abl_beta_0p5.csv  abl_beta_1p0.csv  abl_beta_2p0.csv  abl_beta_3p0.csv  abl_clf_Logistic_Regression.csv  abl_clf_MLP_64×64.csv  abl_clf_Random_Forest.csv  abl_clip_0p001.csv  abl_clip_0p01.csv  abl_clip_0p05.csv  abl_clip_0p1.csv  abl_clip_0p2.csv
results/imagenet/: ext1_results.csv
results/proteingym/: ext1_pg_results.csv  ext1_pg_spearman.csv
scripts/: compute_spearman.py  run_extension1_ablations.py  run_extension1_imagenet.py  run_extension1_proteingym.py
