[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "adaptive-autoeval"
version = "0.1.0"
description = "Adaptive AutoEval: Learning Importance Weights for Model Evaluation under Unknown Covariate Shift"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "scikit-learn>=0.24.0",
    "matplotlib>=3.4.0",
]
